--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -35,6 +35,7 @@ $mobile_padding: 30px;
 
 .video_section_slogan {
   margin-top: 12px;
+  margin-bottom: 32px;
   color: $color_white;
   font-size: $font-size2;
   font-weight: $font-weight_normal;
