--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -8,7 +8,7 @@
   align-items: center;
   justify-content: space-between;
 
-  padding: 32px $desktop_padding 24px;
+  padding: 32px $section_padding 24px;
   height: 96px;
   // width: 100vw;
   background-color: $color_white;
