--- a/src/components/SchemeToggler/SchemeToggler.module.scss
+++ b/src/components/SchemeToggler/SchemeToggler.module.scss
@@ -6,7 +6,7 @@
   height: 40px;
   border-radius: 20px;
   padding: 4px 6px 4px 4px;
-  background-color: $color_white60;
+  background-color: $color_white6;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -21,17 +21,15 @@
   border: none;
   border-radius: 50%;
   cursor: pointer;
-  background-color: #fff;
 }
 
 .dark_scheme_button {
-  background: url(./sprite.svg#cloud-view) no-repeat;
+  background: url(./toggler.svg#dark-view) no-repeat;
+  background-size: 24px 24px;
   background-position: center;
-  // background-size: cover;
 }
 
 .light_scheme_button {
-  background: url(./sprite.svg#cloud-view-blue) no-repeat;
-  background-position: center;
-  // background-size: cover;
+  background: url(./toggler.svg#light-view) no-repeat;
+  background-size: 32px 32px;
 }
