--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -1,19 +1,24 @@
 $color_white: #ffffff;
-$color_white6: rgba(255, 255, 255, 0.06);
-$color_white60: rgba(255, 255, 255, 0.6);
+$color_section_bg: #f5f5f5;
+$color_white6: rgba(0, 0, 0, 0.06);
+$color_white60: rgba(0, 0, 0, 0.6);
 $color_blue: #0075ff;
 $color_black: #000000;
 $color_bg: #1e1e22;
+$color_discount_red: #fe006b;
+$color_new_green: #21d804;
 
 $font-size0: 12px;
 $font-size1: 18px;
 $font-size2: 24px;
+
 $font-size3: 112px;
+$font-size4: 32px;
 $font-weight_bold: 700;
 $font-weight_normal: 400;
 
-$desktop_padding: 60px;
-$mobile_padding: 30px;
+$section_padding: 60px;
+// $mobile_padding: 30px;
 
 // .shadow {
 //   background: #c4c4c4;
@@ -23,7 +28,7 @@ $mobile_padding: 30px;
 .video_section {
   background-position: center;
   background-size: cover;
-  padding: 0 $desktop_padding;
+  padding: 0 $section_padding;
 }
 
 .video_section_header {
