--- a/src/components/DontMiss/DontMiss.module.scss
+++ b/src/components/DontMiss/DontMiss.module.scss
@@ -1,6 +1,6 @@
 @import '../../style/variables';
 
-.tranding_now {
+.dont_miss {
   background-color: $color_section_bg;
   height: 650px;
   padding: $section_padding;
