--- a/src/components/NewCollection/NewCollection.module.scss
+++ b/src/components/NewCollection/NewCollection.module.scss
@@ -16,9 +16,9 @@
   @extend .video_section_slogan;
 }
 
-.shop_button {
-  @extend .video_section_button;
-}
+// .shop_button {
+//   @extend .video_section_button;
+// }
 
 .video_buttons_container {
   margin-top: 91px;
