--- a/src/components/NewInTown/NewInTown.module.scss
+++ b/src/components/NewInTown/NewInTown.module.scss
@@ -16,7 +16,7 @@
   @extend .video_section_slogan;
 }
 
-.shop_button {
-  @extend .video_section_button;
-  // margin-top: 32px;
-}
+// .shop_button {
+//   @extend .video_section_button;
+//   // margin-top: 32px;
+// }
