--- a/src/components/SectionHeader/SectionHeader.module.scss
+++ b/src/components/SectionHeader/SectionHeader.module.scss
@@ -5,6 +5,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding-right: $section_padding;
 
   h2 {
     display: inline-block;
