--- a/src/components/Categories/Categories.module.scss
+++ b/src/components/Categories/Categories.module.scss
@@ -1,8 +1,8 @@
 @import '../../style/variables';
 
-.tranding_now {
+.categories {
   background-color: $color_section_bg;
-  height: 650px;
+  height: 1050px;
   padding: $section_padding;
   padding-right: 0;
 }
