--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -11,13 +11,14 @@ $color_new_green: #21d804;
 $font-size0: 12px;
 $font-size1: 18px;
 $font-size2: 24px;
-
 $font-size3: 112px;
 $font-size4: 32px;
+$font-size5: 64px;
 $font-weight_bold: 700;
 $font-weight_normal: 400;
 
 $section_padding: 60px;
+$card_padding: 24px;
 // $mobile_padding: 30px;
 
 // .shadow {
@@ -46,6 +47,25 @@ $section_padding: 60px;
   font-weight: $font-weight_normal;
 }
 
-.video_section_button {
-  margin-top: 32px;
+// .video_section_button {
+//   margin-top: 32px;
+// }
+
+.styled_scroll {
+  &::-webkit-scrollbar {
+    width: 8px;
+    background-color: #f9f9fd;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    border-radius: 8px;
+    background-color: #18aaaa;
+  }
+
+  &::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.2);
+    border-radius: 8px;
+    background-color: #f9f9fd;
+  }
 }
