--- a/src/components/DiscountLabel/DiscountLabel.module.scss
+++ b/src/components/DiscountLabel/DiscountLabel.module.scss
@@ -1,7 +1,7 @@
 @import '../../style/variables';
 
-.new_button {
-  width: 54px;
+.discount_label {
+  width: 66px;
   height: 32px;
   display: flex;
   flex-direction: row;
@@ -10,10 +10,9 @@
   padding: 4px 8px;
   border: none;
   border-radius: 8px;
-  background: $color_new_green;
+  background: $color_discount_red;
   color: $color_white;
   font-size: $font-size1;
   font-family: inherit;
   font-weight: $font-weight_bold;
-  cursor: pointer;
 }
