--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -3,6 +3,7 @@ $color_section_bg: #f5f5f5;
 $color_white6: rgba(0, 0, 0, 0.06);
 $color_white60: rgba(0, 0, 0, 0.6);
 $color_blue: #0075ff;
+$color_sky_blue: #3c7dff;
 $color_black: #000000;
 $color_bg: #1e1e22;
 $color_discount_red: #fe006b;
