almost done desktop version

--- a/src/components/NewCollection/NewCollection.module.scss
+++ b/src/components/NewCollection/NewCollection.module.scss
@@ -3,7 +3,7 @@
 .new_collection {
   @extend .video_section;
   height: 772px;
-  // background-image: url('./new_collection.gif');
+  background-image: url('./new_collection.gif');
 }
 
 .section_header {
