--- a/src/components/CategoryCard/CategoryCard.module.scss
+++ b/src/components/CategoryCard/CategoryCard.module.scss
@@ -9,9 +9,9 @@
   // width: 300px;
   // height: 300px;
   // background-color: green;
-  background-size: contain;
+  background-size: cover;
   background-position: center;
-  margin-bottom: 20px;
+  // margin-bottom: 20px;
   box-sizing: border-box;
 
   h3 {
