--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -3,6 +3,7 @@
 .header {
   position: sticky;
   top: 0px;
+  z-index: 5;
   display: flex;
   //   flex-direction: column;
   align-items: center;
