--- a/src/components/MenuItem/MenuItem.module.scss
+++ b/src/components/MenuItem/MenuItem.module.scss
@@ -3,7 +3,9 @@
 .menu_item {
   font-size: $font-size1;
   font-weight: $font-weight_normal;
-  cursor: pointer;
+  text-decoration: none;
+  color: inherit;
+  // cursor: pointer;
 }
 
 // a:active {
