--- a/src/components/ProductCard/ProductCard.module.scss
+++ b/src/components/ProductCard/ProductCard.module.scss
@@ -1,23 +1,85 @@
 @import '../../style/variables';
 
-.category_card {
+.product_card {
   flex-shrink: 0;
-  display: flex;
-  padding: $card_padding;
-  flex-direction: column;
-  justify-content: flex-end;
-  // width: 300px;
-  // height: 300px;
-  // background-color: green;
-  background-size: contain;
+}
+
+.product_view {
+  width: 427px;
+  height: 475px;
+  background-size: cover;
   background-position: center;
-  margin-bottom: 20px;
+}
+
+.new_label,
+.discount_label {
+  position: relative;
+}
+
+.new_label::after {
+  @extend .label;
+  content: 'New';
+  width: 54px;
+  background: $color_new_green;
+}
+
+.discount_label::after {
+  @extend .label;
+  content: '-50%';
+  width: 66px;
+  background: $color_discount_red;
+}
+
+.like_button_container {
+  text-align: right;
+  padding: 19px 16px 0 0;
+}
+
+.like_button {
+  width: 24px;
+  height: 20px;
+  cursor: pointer;
+  border: none;
+  padding: 0;
+  background-color: transparent;
+  background-image: url(./heart.svg);
+  background-position: center;
+  background-size: contain;
+}
+
+.product_info {
+  background-color: $color_section_bg;
+  width: 427px;
+  height: 90px;
+  padding: 0;
+  padding-top: 16px;
   box-sizing: border-box;
+}
+
+.main_info,
+.secondary_info {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.main_info {
+  font-size: $font-size2;
+  font-weight: $font-weight_bold;
+  color: $color_bg;
 
   h3 {
-    font-size: $font-size5;
-    font-weight: $font-weight_bold;
-    margin-bottom: 12px;
-    color: $color_white;
+    font-weight: $font-weight_normal;
+  }
+}
+
+.secondary_info {
+  margin-top: 10px;
+  font-size: $font-size1;
+  font-weight: $font-weight_normal;
+  color: $color_bg6;
+
+  .old_price {
+    text-decoration: line-through;
   }
 }
