--- a/src/components/Categories/Categories.module.scss
+++ b/src/components/Categories/Categories.module.scss
@@ -1,8 +1,5 @@
 @import '../../style/variables';
 
 .categories {
-  height: 1050px;
-  padding: $section_padding;
-  padding-right: 0;
-  background-color: $color_section_bg;
+  @extend .card_section;
 }
