--- a/src/components/GridTape/GridTape.module.scss
+++ b/src/components/GridTape/GridTape.module.scss
@@ -2,24 +2,51 @@
 
 .grid_tape {
   @extend .styled_scroll;
+  overflow-x: auto;
   display: grid;
   padding-bottom: 20px;
-  overflow-x: auto;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(2, 1fr);
+  grid-template-columns: repeat(5, 425px);
+  grid-template-rows: repeat(2, 475px);
   grid-column-gap: 20px;
   grid-row-gap: 20px;
+  margin-left: $section_padding;
+
+  @media screen and (max-width: $tablet_width) {
+    grid-template-columns: repeat(5, 325px);
+    grid-template-rows: repeat(2, 475px);
+    margin-left: $section_padding_mobile;
+  }
+
+  @media screen and (max-width: $mobile_width) {
+    grid-template-columns: repeat(4, 250px);
+    grid-template-rows: repeat(2, 475px);
+    grid-column-gap: 0;
+    grid-row-gap: 0;
+    margin-left: 0;
+  }
 }
 
 div:nth-child(1) {
-  grid-area: 1 / 1 / 3 / 2;
+  grid-area: 1 / 1 / 3 / 3;
+  @media screen and (max-width: $mobile_width) {
+    grid-area: 1 / 1 / 2 / 3;
+  }
 }
 div:nth-child(2) {
-  grid-area: 1 / 2 / 2 / 3;
+  grid-area: 1 / 3 / 2 / 4;
+  @media screen and (max-width: $mobile_width) {
+    grid-area: 2 / 1 / 3 / 2;
+  }
 }
 div:nth-child(3) {
-  grid-area: 2 / 2 / 3 / 3;
+  grid-area: 2 / 3 / 3 / 4;
+  @media screen and (max-width: $mobile_width) {
+    grid-area: 2 / 2 / 3 / 3;
+  }
 }
 div:nth-child(4) {
-  grid-area: 1 / 3 / 3 / 4;
+  grid-area: 1 / 4 / 3 / 6;
+  @media screen and (max-width: $mobile_width) {
+    grid-area: 1 / 3 / 3 / 5;
+  }
 }
