--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -11,4 +11,9 @@
   justify-content: space-between;
   background-color: $color_white;
   box-shadow: 0px 120px 80px 60px rgba(0, 0, 0, 0.4);
+
+  @media screen and (max-width: $tablet_width) {
+    padding: 32px $section_padding_mobile 24px;
+    height: 88px;
+  }
 }
