--- a/src/components/LinksBar/LinksBar.module.scss
+++ b/src/components/LinksBar/LinksBar.module.scss
@@ -1,5 +1,9 @@
 @import '../../style/variables';
 
+.links_bar {
+  margin: 0 10px;
+}
+
 .title {
   padding-bottom: 12px;
   font-size: $font-size2;
