--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -4,12 +4,59 @@
   padding: $section_padding;
   box-sizing: border-box;
   background-color: $color_white;
-  display: flex;
-  align-items: flex-start;
-  justify-content: space-between;
+  // display: flex;
+  // align-items: flex-start;
+  // justify-content: space-between;
+
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-column-gap: 10px;
+  grid-row-gap: 10px;
+
+  div:nth-child(1) {
+    grid-area: 1 / 1 / 3 / 2;
+  }
+  div:nth-child(2) {
+    grid-area: 1 / 2 / 3 / 4;
+  }
+  div:nth-child(3) {
+    grid-area: 1 / 4 / 3 / 5;
+  }
+  div:nth-child(4) {
+    grid-area: 1 / 5 / 2 / 6;
+  }
+  div:nth-child(5) {
+    grid-area: 2 / 5 / 3 / 6;
+  }
 
   @media screen and (max-width: $tablet_width) {
-    padding: $section_padding_mobile;
+    padding: $section_pagging_tablet $section_padding_mobile;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(5, auto);
+    grid-row-gap: 24px;
+
+    div:nth-child(1) {
+      grid-area: 1 / 1 / 3 / 2;
+    }
+    div:nth-child(2) {
+      grid-area: 3 / 1 / 6 / 2;
+    }
+    div:nth-child(3) {
+      grid-area: 3 / 2 / 4 / 3;
+    }
+    div:nth-child(4) {
+      grid-area: 5 / 2 / 6 / 3;
+    }
+    div:nth-child(5) {
+      grid-area: 2 / 2 / 3 / 3;
+
+      @media screen and (max-width: $mobile_width) {
+        button {
+          width: 100%;
+        }
+      }
+    }
   }
 
   a {
@@ -19,15 +66,15 @@
   .config {
     display: flex;
     flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
-    flex-shrink: 1;
+    align-items: flex-start;
+    justify-content: flex-start;
+    // flex-shrink: 1;
 
     .stone_tyle {
       font-size: $font-size2;
       font-weight: $font-weight_normal;
       color: $color_bg;
-      margin: 10px;
+      margin: 0 12px 24px 0;
 
       span {
         font-weight: $font-weight_bold;
@@ -36,12 +83,13 @@
     }
   }
 
-  .social {
-    height: 140px;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    justify-content: space-between;
+  .social,
+  .shop_button {
+    text-align: right;
+
+    @media screen and (max-width: $tablet_width) {
+      text-align: left;
+    }
   }
 }
 
