--- a/src/components/SocialBar/SocialBar.module.scss
+++ b/src/components/SocialBar/SocialBar.module.scss
@@ -3,7 +3,7 @@
 .social_bar {
   width: 146px;
   height: 38px;
-  display: flex;
+  display: inline-flex;
   align-items: center;
   justify-content: space-between;
 
