--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -22,10 +22,11 @@ $font-size6: 44px;
 $font-weight_bold: 700;
 $font-weight_normal: 400;
 
-$tablet_width: 860px;
+$tablet_width: 800px;
 $mobile_width: 375px;
 
 $section_padding: 60px;
+$section_pagging_tablet: 44px;
 $section_padding_mobile: 16px;
 
 $card_padding: 24px;
