--- a/src/components/BarLink/BarLink.module.scss
+++ b/src/components/BarLink/BarLink.module.scss
@@ -1,12 +1,17 @@
 @import '../../style/variables';
 
 .link {
-  width: 110px;
+  display: inline-block;
+  width: 84px;
   height: 50px;
   line-height: 50px;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+
+  @media screen and (max-width: $tablet_width) {
+    width: 120px;
+  }
 
   a {
     font-size: $font-size1;
