--- a/src/components/LinksBar/LinksBar.module.scss
+++ b/src/components/LinksBar/LinksBar.module.scss
@@ -1,7 +1,7 @@
 @import '../../style/variables';
 
 .links_bar {
-  margin: 0 10px;
+  overflow-y: hidden;
 }
 
 .title {
@@ -16,4 +16,8 @@
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
+
+  @media screen and (max-width: $tablet_width) {
+    flex-direction: row;
+  }
 }
