--- a/src/components/ShopButton/ShopButton.module.scss
+++ b/src/components/ShopButton/ShopButton.module.scss
@@ -6,7 +6,7 @@
   padding: 12px 24px;
   border-radius: 8px;
   border: none;
-  display: flex;
+  display: inline-flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
