--- a/src/components/UserBar/UserBar.module.scss
+++ b/src/components/UserBar/UserBar.module.scss
@@ -1,3 +1,5 @@
+@import '../../style/variables';
+
 .user_bar {
   width: 200px;
   display: flex;
@@ -10,6 +12,16 @@
     border: none;
     padding: 0;
     cursor: pointer;
+  }
+
+  @media screen and (max-width: $tablet_width) {
+    width: auto;
+    .user_icon,
+    .kebab_icon,
+    .basket_icon,
+    .heart_icon {
+      display: none;
+    }
   }
 }
 
